--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,25 +49,21 @@ body {
     content: '';
     position: absolute;
     left: 0;
-    top: 2.2em; /* Aligns with the center of the node */
+    top: 50%; /* Adjust to center with the node */
     @apply w-16 h-0.5 bg-border;
+    transform: translateY(-50%);
 }
 
 .node-content {
     @apply flex-shrink-0 flex items-center;
 }
 
-.children {
-    @apply pl-16 max-h-0 overflow-hidden transition-all duration-700 ease-in-out opacity-0;
-}
-
-.children.expanded {
-    max-height: 2000px; /* Adjust as needed */
-    @apply opacity-100;
-}
-
 .node {
-    @apply inline-flex flex-col p-4 sm:p-6 rounded-lg shadow-md text-left min-w-[280px] max-w-md border border-border whitespace-normal;
+    @apply inline-flex flex-col p-4 sm:p-6 rounded-lg shadow-md text-left min-w-[300px] max-w-md border border-border whitespace-normal transition-colors;
+}
+
+.node.collapsible {
+    @apply cursor-pointer;
 }
 
 .node-title {
@@ -90,9 +86,10 @@ body {
     @apply ml-2 transition-transform duration-300 ease-in-out h-5 w-5;
 }
 
-.icon.rotated {
-    transform: rotate(90deg);
+.children {
+     @apply pl-16 overflow-hidden transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down;
 }
+
 
 @layer base {
   :root {
