--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,5 +106,7 @@ body {
   .dark body {
     background-color: hsl(var(--background));
     background-image: radial-gradient(ellipse 80% 80% at 50% -20%,rgba(120,119,198,0.3),hsla(0,0%,100%,0));
+    background-size: 200% 200%;
+    animation: gradient-animation 15s ease infinite;
   }
 }
